--- a/notebooks/DensePose-Demo.ipynb
+++ b/notebooks/DensePose-Demo.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T23:04:47.163664Z",
-     "start_time": "2019-05-05T23:04:47.152079Z"
+     "end_time": "2019-07-02T04:11:11.133871Z",
+     "start_time": "2019-07-02T04:11:10.776193Z"
     },
     "scrolled": true
    },
@@ -36,8 +36,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T23:04:48.075152Z",
-     "start_time": "2019-05-05T23:04:48.061240Z"
+     "end_time": "2019-07-02T04:11:11.145898Z",
+     "start_time": "2019-07-02T04:11:11.135461Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T23:01:24.914441Z",
-     "start_time": "2019-05-05T23:01:24.899629Z"
+     "end_time": "2019-07-02T04:11:11.158580Z",
+     "start_time": "2019-07-02T04:11:11.147598Z"
     }
    },
    "outputs": [],
@@ -71,8 +71,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T23:01:31.278589Z",
-     "start_time": "2019-05-05T23:01:26.409175Z"
+     "end_time": "2019-07-02T04:11:16.298792Z",
+     "start_time": "2019-07-02T04:11:11.160295Z"
     },
     "scrolled": true
    },
@@ -82,6 +82,7 @@
     "MODEL_FILE = \"https://dl.fbaipublicfiles.com/densepose/DensePoseKeyPointsMask_ResNet50_FPN_s1x-e2e.pkl\"\n",
     "\n",
     "merge_cfg_from_file(CONFIG_FILE)\n",
+    "cfg.TEST.NMS = 0.3\n",
     "cfg.NUM_GPUS = 1\n",
     "model_weights = cache_url(MODEL_FILE, cfg.DOWNLOAD_CACHE)\n",
     "assert_and_infer_cfg(cache_urls=False)\n",
@@ -93,13 +94,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T23:01:34.739572Z",
-     "start_time": "2019-05-05T23:01:34.722385Z"
+     "end_time": "2019-07-02T04:11:46.873426Z",
+     "start_time": "2019-07-02T04:11:46.826935Z"
     }
    },
    "outputs": [],
    "source": [
-    "image = cv2.imread('../DensePoseData/demo_data/demo_im.jpg')"
+    "image = cv2.imread('../DensePoseData/demo_data/input3.png')"
    ]
   },
   {
@@ -107,8 +108,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T23:01:36.188499Z",
-     "start_time": "2019-05-05T23:01:35.922970Z"
+     "end_time": "2019-07-02T04:11:49.492169Z",
+     "start_time": "2019-07-02T04:11:48.966835Z"
     }
    },
    "outputs": [],
@@ -124,14 +125,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T23:04:56.066499Z",
-     "start_time": "2019-05-05T23:04:55.532340Z"
+     "end_time": "2019-07-02T04:11:51.596074Z",
+     "start_time": "2019-07-02T04:11:50.727204Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "result = vis_utils.vis_one_image_opencv(image, cls_boxes, cls_segms, cls_keyps)\n",
+    "result = vis_utils.vis_one_image_opencv(image, cls_boxes, cls_segms, cls_keyps, show_box=True)\n",
     "imshow(result)"
    ]
   }
